--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,13 @@ li {
 
 #name {
 	display: inline-block;
-	width: 200px;
-	height: 40px;
+	width: 100px;
+	height: 30px;
 	border-radius: 5px;
 	border: 1px solid blue;
+}
+
+#name_text {
+		display: inline-block;
+		padding: 0 0 10px 20px;		
 }
